--- a/src/htdocs/css/event-header.scss
+++ b/src/htdocs/css/event-header.scss
@@ -1,13 +1,13 @@
 .event-header {
-	div {
+	> div {
 		margin:8px 0;
 
-		span {
+		> span {
 			display:block;
 		}
 	}
 
-	.impact-bubbles {
+	> .impact-bubbles {
 
 		&:after {
 			display:block;
@@ -15,7 +15,7 @@
 			content:' ';
 		}
 
-		a {
+		> a {
 			display:block;
 			background:#fff;
 			padding: 3px 5px 2px;
@@ -25,41 +25,6 @@
 			border:1px solid #ccc;
 		}
 
-		.pager-alertlevel-pending {
-			background-color:#fff;
-			color:#000;
-		}
-		.pager-alertlevel-green {
-			background-color:#00b04f !important;
-			color:#fff !important;
-		}
-		.pager-alertlevel-yellow {
-			background-color:#ff0 !important;
-			color:#000 !important;
-		}
-		.pager-alertlevel-orange {
-			background-color:#f90 !important;
-			color:#000 !important;
-		}
-		.pager-alertlevel-red {
-			background-color:#f00 !important;
-			color:#fff !important;
-		}
-
-		.roman {font-family: Tahoma, Verdana, Segoe, sans-serif;}
-		.mmiI{color:#000000 !important; background-color:#FFFFFF !important;}
-		.mmiII{color:#000000 !important; background-color:#ACD8E9 !important;}
-		.mmiIII{color:#000000 !important; background-color:#ACD8E9 !important;}
-		.mmiIV{color:#000000 !important; background-color:#83D0DA !important;}
-		.mmiV{color:#000000 !important; background-color:#7BC87F !important;}
-		.mmiVI{color:#000000 !important; background-color:#F9F518 !important;}
-		.mmiVII{color:#000000 !important; background-color:#FAC611 !important;}
-		.mmiVIII{color:#000000 !important; background-color:#FA8A11 !important;}
-		.mmiIX{color:#FFFFFF !important; background-color:#F7100C !important;}
-		.mmiX{color:#FFFFFF !important; background-color:#C80F0A !important;}
-		.mmiXI{color:#FFFFFF !important; background-color:#C80F0A !important;}
-		.mmiXII{color:#FFFFFF !important; background-color:#C80F0A !important;}
-
 		.tsunami {
 			border:0;
 			padding:0;
@@ -68,10 +33,45 @@
 	}
 }
 
+.pager-alertlevel-pending {
+	background-color:#fff;
+	color:#000;
+}
+.pager-alertlevel-green {
+	background-color:#00b04f !important;
+	color:#fff !important;
+}
+.pager-alertlevel-yellow {
+	background-color:#ff0 !important;
+	color:#000 !important;
+}
+.pager-alertlevel-orange {
+	background-color:#f90 !important;
+	color:#000 !important;
+}
+.pager-alertlevel-red {
+	background-color:#f00 !important;
+	color:#fff !important;
+}
+
+.roman {font-family: Tahoma, Verdana, Segoe, sans-serif;}
+.mmiI{color:#000000 !important; background-color:#FFFFFF !important;}
+.mmiII{color:#000000 !important; background-color:#ACD8E9 !important;}
+.mmiIII{color:#000000 !important; background-color:#ACD8E9 !important;}
+.mmiIV{color:#000000 !important; background-color:#83D0DA !important;}
+.mmiV{color:#000000 !important; background-color:#7BC87F !important;}
+.mmiVI{color:#000000 !important; background-color:#F9F518 !important;}
+.mmiVII{color:#000000 !important; background-color:#FAC611 !important;}
+.mmiVIII{color:#000000 !important; background-color:#FA8A11 !important;}
+.mmiIX{color:#FFFFFF !important; background-color:#F7100C !important;}
+.mmiX{color:#FFFFFF !important; background-color:#C80F0A !important;}
+.mmiXI{color:#FFFFFF !important; background-color:#C80F0A !important;}
+.mmiXII{color:#FFFFFF !important; background-color:#C80F0A !important;}
+
 @media screen and (min-width: 768px) {
 	.event-header {
-		.impact-bubbles {
-			a {
+		> .impact-bubbles {
+			> a {
 				float:left;
 				margin-right:16px;
 				margin-top:0;
