Reformatted downloads content.

--- a/src/htdocs/css/downloads.scss
+++ b/src/htdocs/css/downloads.scss
@@ -1,67 +1,23 @@
 .downloads {
-	> .tabular {
+	> dl {
 		> dt {
 			display:block;
-			float:left;
-			clear:left;
 			font-weight:bold;
 			color:#333;
-		
-			&.header {
-				display:none;
-			}
 		}
 		> dd {
 			display:block;
-			float:left;
-			margin:0 0 0 8px;
-		}
-		> .download-type {
-			margin-top:8px;
-		}
-	}
-}
+			margin-bottom:8px;
 
-@media screen and (min-width: 768px) {
-	.nojs .downloads > .tabular {
-		> dd, > dt, > dt.header {
-			width:33%;
-		}
-	}
-
-	.downloads {
-		> .tabular {
-			> dd, > dt.header {
-				display:block;
-				float:left;
+			> ul {
 				margin:0;
-				padding:4px;
-				width:25%;
-				white-space:nowrap;
-				overflow:hidden;
-				text-overflow:ellipsis;
-				border:1px solid #fff;
-				background-color:#eee;
-			}
-			> dt {
-				display: none;
-				clear:none;
+				padding:0;
+				list-style:none;
 
-				&.header {
-					background-color:#ccc;
-					color:#333;
-					font-weight:bold;
+				> li {
+					display:block;
+					margin:0 0 4px;
 				}
-			}
-			> .download-type {
-				margin-top:0;
-				clear:left;
-			}
-
-			&:after {
-				display:block;
-				clear:left;
-				content:' ';
 			}
 		}
 	}
