--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -9,8 +9,11 @@
 	@include box-sizing(border-box);
 }
 
-h1 {
-	margin:8px 0;
+.page-header > h1 {
+	margin:0;
+}
+.page-content {
+	margin-top:0;
 }
 
 .clearfix:after {
