--- a/src/htdocs/modules/summary/0-0-1/css/_TectonicSummary.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/_TectonicSummary.scss
@@ -1,217 +1,170 @@
 /*** Tectonic Summary Images ***/
 $baseImageUrl: 'http://earthquake.usgs.gov/earthquakes/tectonic/images';
-.summary-tectonic-summary,
-.summary-general-text {
-	> .collapsable {
-		position:relative;
-
-		> .readMore {
-			display:block;
-			background-color:#fff;
-			text-align:left;
-			padding-top:0em;
-			color:blue;
-			cursor:pointer;
-		}
-
-		&.collapsed {
-			max-height:11em;
-			overflow:hidden;
-
-			> .readMore {
-				position:absolute;
-				bottom:0;
-				left:0;
-				right:0;
-			}
-		}
-	}
-}
 
 .summary-tectonic-summary {
-	> .collapsable {
+	a.tectonic {
+		margin:0 0 16px 0;
 
-		a.tectonic {
+		&:before{
+			content:'Map of Tectonic Summary Region';
 			display:block;
-			width:304px;
-			background-repeat: no-repeat;
-			background-position:0 0;
-			background-size:contain;
-			margin:0 0 16px 0;
-			&:before{content:'Tectonic Summary Image'; display:block;}
-		}
-
-		&.popup > a.aleutian {
-			background-image:url('#{$baseImageUrl}/aleutian_tsum304.jpg');
-			height:204px;
-		}
-
-
-		> a.caribbean {
-			background-image:url('#{$baseImageUrl}/caribbean_tsum304.jpg');
-			height:204px;
-		}
-
-
-		> a.emaustralia {
-			background-image:url('#{$baseImageUrl}/emaustralia_tsum304.jpg');
-			height:432px;
-		}
-
-
-		> a.himalaya {
-			background-image:url('#{$baseImageUrl}/himalaya_tsum304.jpg');
-			height:204px;
-		}
-
-
-		> a.japan {
-			background-image:url('#{$baseImageUrl}/japan_tsum304.jpg');
-			height:294px;
-		}
-
-		> a.java {
-			background-image:url('#{$baseImageUrl}/java_tsum304.jpg');
-			height:192px;
-		}
-
-		> a.kuril {
-			background-image:url('#{$baseImageUrl}/kuril_tsum304.jpg');
-			height:350px;
-		}
-
-		> a.middleeast {
-			background-image:url('#{$baseImageUrl}/middleeast_tsum304.jpg');
-			height:204px;
-		}
-
-		> a.newguinea {
-			background-image:url('#{$baseImageUrl}/newguinea_tsum304.jpg');
-			height:168px;
-		}
-
-		> a.philippinesea {
-			background-image:url('#{$baseImageUrl}/philippinesea_tsum304.jpg');
-			height:294px;
-		}
-
-		&.popup > a.southamerica {
-			background-image:url('#{$baseImageUrl}/southamerica_tsum304.jpg');
-			height:350px;
-		}
-
-		> a.sumatra {
-			background-image:url('#{$baseImageUrl}/sumatra_tsum304.jpg');
-			height:434px;
-		}
-
-		> a.mexico {
-			background-image:url('#{$baseImageUrl}/mexico_tsum304.jpg');
-			height:192px;
-		}
-
-		> a.mediterranean {
-			background-image:url('#{$baseImageUrl}/mediterranean_tsum304.jpg');
-			height:204px;
 		}
 	}
+
+	/*
+	a.aleutian {
+		background-image:url('#{$baseImageUrl}/aleutian_tsum304.jpg');
+		height:204px;
+	}
+
+
+	a.caribbean {
+		background-image:url('#{$baseImageUrl}/caribbean_tsum304.jpg');
+		height:204px;
+	}
+
+
+	a.emaustralia {
+		background-image:url('#{$baseImageUrl}/emaustralia_tsum304.jpg');
+		height:432px;
+	}
+
+
+	a.himalaya {
+		background-image:url('#{$baseImageUrl}/himalaya_tsum304.jpg');
+		height:204px;
+	}
+
+
+	a.japan {
+		background-image:url('#{$baseImageUrl}/japan_tsum304.jpg');
+		height:294px;
+	}
+
+	a.java {
+		background-image:url('#{$baseImageUrl}/java_tsum304.jpg');
+		height:192px;
+	}
+
+	a.kuril {
+		background-image:url('#{$baseImageUrl}/kuril_tsum304.jpg');
+		height:350px;
+	}
+
+	a.middleeast {
+		background-image:url('#{$baseImageUrl}/middleeast_tsum304.jpg');
+		height:204px;
+	}
+
+	a.newguinea {
+		background-image:url('#{$baseImageUrl}/newguinea_tsum304.jpg');
+		height:168px;
+	}
+
+	a.philippinesea {
+		background-image:url('#{$baseImageUrl}/philippinesea_tsum304.jpg');
+		height:294px;
+	}
+
+	a.southamerica {
+		background-image:url('#{$baseImageUrl}/southamerica_tsum304.jpg');
+		height:350px;
+	}
+
+	a.sumatra {
+		background-image:url('#{$baseImageUrl}/sumatra_tsum304.jpg');
+		height:434px;
+	}
+
+	a.mexico {
+		background-image:url('#{$baseImageUrl}/mexico_tsum304.jpg');
+		height:192px;
+	}
+
+	a.mediterranean {
+		background-image:url('#{$baseImageUrl}/mediterranean_tsum304.jpg');
+		height:204px;
+	}
+	*/
 }
 
 @media (min-width:768px) {
-	.summary-tectonic-summary,
-	.summary-general-text {
-		> .collapsable {
-
-			.readMore {
-				display:none;
-			}
-
-			&.collapsed {
-				max-height:none;
-			}
-		}
-	}
 	.summary-tectonic-summary {
+		a.tectonic {
+			float:right;
+			width:464px;
+			margin:0 16px 16px 0;
+			&:before{content:none;}
+		}
 
-		> .collapasable {
+		a.aleutian {
+			background-image:url('#{$baseImageUrl}/aleutian_tsum464.jpg');
+			height:300px;
+		}
 
+		a.caribbean {
+			background-image:url('#{$baseImageUrl}/caribbean_tsum464.jpg');
+			height:312px;
+		}
 
-			> a.tectonic {
-				float:right;
-				width:464px;
-				margin:0 16px 16px 0;
-				&:before{content:none;}
-			}
+		a.emaustralia {
+			background-image:url('#{$baseImageUrl}/emaustralia_tsum464.jpg');
+			height:648px;
+		}
 
-			> a.aleutian {
-				background-image:url('#{$baseImageUrl}/aleutian_tsum464.jpg');
-				height:300px;
-			}
+		a.himalaya {
+			background-image:url('#{$baseImageUrl}/himalaya_tsum464.jpg');
+			height:312px;
+		}
 
-			> a.caribbean {
-				background-image:url('#{$baseImageUrl}/caribbean_tsum464.jpg');
-				height:312px;
-			}
+		a.japan {
+			background-image:url('#{$baseImageUrl}/japan_tsum464.jpg');
+			height:448px;
+		}
 
-			> a.emaustralia {
-				background-image:url('#{$baseImageUrl}/emaustralia_tsum464.jpg');
-				height:648px;
-			}
+		a.java {
+			background-image:url('#{$baseImageUrl}/java_tsum464.jpg');
+			height:300px;
+		}
 
-			> a.himalaya {
-				background-image:url('#{$baseImageUrl}/himalaya_tsum464.jpg');
-				height:312px;
-			}
+		a.kuril {
+			background-image:url('#{$baseImageUrl}/kuril_tsum464.jpg');
+			height:532px;
+		}
 
-			> a.japan {
-				background-image:url('#{$baseImageUrl}/japan_tsum464.jpg');
-				height:448px;
-			}
+		a.middleeast {
+			background-image:url('#{$baseImageUrl}/middleeast_tsum464.jpg');
+			height:312px;
+		}
 
-			> a.java {
-				background-image:url('#{$baseImageUrl}/java_tsum464.jpg');
-				height:300px;
-			}
+		a.newguinea {
+			background-image:url('#{$baseImageUrl}/newguinea_tsum464.jpg');
+			height:252px;
+		}
 
-			> a.kuril {
-				background-image:url('#{$baseImageUrl}/kuril_tsum464.jpg');
-				height:532px;
-			}
+		a.philippinesea {
+			background-image:url('#{$baseImageUrl}/philippinesea_tsum464.jpg');
+			height:434px;
+		}
 
-			> a.middleeast {
-				background-image:url('#{$baseImageUrl}/middleeast_tsum464.jpg');
-				height:312px;
-			}
+		a.southamerica {
+			background-image:url('#{$baseImageUrl}/southamerica_tsum464.jpg');
+			height:532px;
+		}
 
-			> a.newguinea {
-				background-image:url('#{$baseImageUrl}/newguinea_tsum464.jpg');
-				height:252px;
-			}
+		a.sumatra {
+			background-image:url('#{$baseImageUrl}/sumatra_tsum464.jpg');
+			height:658px;
+		}
 
-			> a.philippinesea {
-				background-image:url('#{$baseImageUrl}/philippinesea_tsum464.jpg');
-				height:434px;
-			}
+		a.mexico {
+			background-image:url('#{$baseImageUrl}/mexico_tsum464.jpg');
+			height:300px;
+		}
 
-			> a.southamerica {
-				background-image:url('#{$baseImageUrl}/southamerica_tsum464.jpg');
-				height:532px;
-			}
-
-			> a.sumatra {
-				background-image:url('#{$baseImageUrl}/sumatra_tsum464.jpg');
-				height:658px;
-			}
-
-			> a.mexico {
-				background-image:url('#{$baseImageUrl}/mexico_tsum464.jpg');
-				height:300px;
-			}
-
-			> a.mediterranean {
-				background-image:url('#{$baseImageUrl}/mediterranean_tsum464.jpg');
-				height:312px;
-			}
+		a.mediterranean {
+			background-image:url('#{$baseImageUrl}/mediterranean_tsum464.jpg');
+			height:312px;
 		}
 	}
 }
