--- a/src/htdocs/modules/summary/0-0-1/css/index.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/index.scss
@@ -32,3 +32,29 @@
 		}
 	}
 }
+
+.accordion {
+	> h3 {
+		cursor:pointer;
+	}
+
+	&.accordion-collapsed {
+		> div {
+			display:none;
+		}
+	}
+}
+
+@media (min-width:768px) {
+	.accordion {
+		> h3 {
+			cursor:default;
+		}
+
+		&.accordion-collapsed {
+			> div {
+				display:block;
+			}
+		}
+	}
+}
