--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -6,6 +6,8 @@
 @import 'downloads.css';
 @import '../../../node_modules/hazdev-tablist/src/tablist/TabList.scss';
 
+@import '../modules/base/0-0-1/css/ContentsXML.scss';
+
 * {
 	@include box-sizing(border-box);
 }
