--- a/src/htdocs/modules/summary/0-0-1/css/_InteractiveMap.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/_InteractiveMap.scss
@@ -28,7 +28,7 @@
 		border-radius:4px;
 	}
 
-	.city-distance, .map-epicenter {
+	.city-distance {
 		display:block;
 		font-size:.9em;
 		color:#333;
