Add "Downloads" header via css, spacing around downloads section

--- a/src/htdocs/modules/scientific/0-0-1/css/_MomentTensorPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_MomentTensorPage.scss
@@ -41,7 +41,15 @@
 		}
 	}
 
-	> .downloads > div > .contentsxml {
-		font-size:smaller;
+
+	> .downloads {
+		margin:1em 0 2em;
+
+		&:before {
+			display:block;
+			content: 'Downloads';
+			font-size: larger;
+			font-weight:bold;
+		}
 	}
 }
