--- a/src/htdocs/modules/scientific/0-0-1/css/_ScientificDetailPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_ScientificDetailPage.scss
@@ -2,12 +2,21 @@
 
 .scientific-detail {
 
-	> .tablist > nav > section {
+	> .tablist-top > nav > section {
+		max-width:none;
 		line-height:1;
 	}
 
-	> .downloads > div > .contentsxml {
-		font-size:smaller;
+
+	> .downloads {
+		margin:1em 0 2em;
+
+		&:before {
+			display:block;
+			content: 'Downloads';
+			font-size: larger;
+			font-weight:bold;
+		}
 	}
 
 }
