Refactored ScientificDetail page to HypocenterPage

--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -1,12 +1,11 @@
 
 
-.scientific-detail {
+.scientific-hypocenter {
 
 	> .tablist-top > nav > section {
 		max-width:none;
 		line-height:1;
 	}
-
 
 	> .downloads {
 		margin:1em 0 2em;
