--- a/src/htdocs/modules/scientific/0-0-1/css/index.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/index.scss
@@ -34,6 +34,6 @@ canvas {
 }
 
 @import "ScientificSummaryPage";
-@import "ScientificDetailPage";
+@import "HypocenterPage";
 @import "MomentTensorPage";
 
