--- a/src/htdocs/modules/base/0-0-1/css/ContentsXML.scss
+++ b/src/htdocs/modules/base/0-0-1/css/ContentsXML.scss
@@ -8,39 +8,46 @@
 
 .contentsxml-content {
 	margin: 1em 0;
+	border-top:1px solid #ddd;
 
 	// header for content
 	> header > h1 {
 		margin: 1em 0 0;
 		font-size: 1em;
 		font-weight: bold;
-		position: relative;
 		clear:both;
-	}
-
-	// list of available formats
-	> ul.downloads {
-		list-style:none;
-		padding: 0;
-		margin: 0 0 1em 0;
-
-		> li {
-			list-style: none;
-			display: block;
-			padding: 0;
-			margin: 0 0 0 1em;
-		}
 	}
 
 	// image content
 	> figure {
 		clear: both;
-		margin: 1em 40px;
+		margin: 1em 0;
 
 		> img {
-			margin: 1em 0;
+			margin: 8px 0;
 			max-width: 100%;
+		}
+
+		> figcaption {
+			font-style: italic;
 		}
 	}
 
+}
+
+.contentsxml-downloads {
+
+	> header > h1 {
+		font-size:1em;
+		font-weight:normal;
+		margin: 1em 0 0;
+	}
+
+	> ul {
+		margin-top:0;
+
+		> li {
+			padding:4px 0;
+		}
+	}
 }
