Moved getOriginDetail to HypocenterPage js/css; updated top margin on "downloads" content

--- a/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_HypocenterPage.scss
@@ -1,4 +1,19 @@
 
+.origin-detail {
+	width: 100%;
+	max-width:480px;
+
+	th, td {
+		text-align: left;
+
+		> .uncertainty {
+			color: #666;
+			float: right;
+			white-space: nowrap;
+		}
+	}
+}
+
 
 .scientific-hypocenter {
 
@@ -8,14 +23,7 @@
 	}
 
 	> .downloads {
-		margin:1em 0 2em;
-
-		&:before {
-			display:block;
-			content: 'Downloads';
-			font-size: larger;
-			font-weight:bold;
-		}
+		margin:2em 0;
 	}
 
 }
