--- a/src/htdocs/modules/base/0-0-1/css/ContentsXML.scss
+++ b/src/htdocs/modules/base/0-0-1/css/ContentsXML.scss
@@ -10,15 +10,41 @@
 	margin: 1em 0;
 	border-top:1px solid #ddd;
 
-	// header for content
+	// header
 	> header > h1 {
 		margin: 1em 0 0;
 		font-size: 1em;
 		font-weight: bold;
-		clear:both;
 	}
 
-	// image content
+	// available formats
+	> .formats {
+		&:before {
+			content: 'Available Formats:';
+			float:left;
+		}
+
+		list-style:none;
+		float:left;
+		margin:0 0 1em;
+		padding:0;
+		font-size:smaller;
+
+		> li {
+			float:left;
+			display:block;
+			display:inline-block;
+			margin-left:1em;
+		}
+
+		&:after {
+			content: ' ';
+			clear:both;
+			display:block;
+		}
+	}
+
+	// image
 	> figure {
 		clear: both;
 		margin: 1em 0;
@@ -30,24 +56,6 @@
 
 		> figcaption {
 			font-style: italic;
-		}
-	}
-
-}
-
-.contentsxml-downloads {
-
-	> header > h1 {
-		font-size:1em;
-		font-weight:normal;
-		margin: 1em 0 0;
-	}
-
-	> ul {
-		margin-top:0;
-
-		> li {
-			padding:4px 0;
 		}
 	}
 }
