Changed .striped class to .tabular

--- a/src/htdocs/modules/scientific/0-0-1/css/index.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/index.scss
@@ -2,7 +2,7 @@
 
 
 // TODO: move this to a different style sheet
-table.striped {
+table.tabular {
 	background-color:#fefefe;
 	border: 1px solid #eee;
 	border-collapse: collapse;
