Added top/bottom margin to event-module-content

--- a/src/htdocs/css/event-layout.scss
+++ b/src/htdocs/css/event-layout.scss
@@ -2,5 +2,17 @@
 
 }
 .event-content {
-	
+
+}
+
+
+.event-module-header {
+
+}
+
+.event-module-content {
+	margin: 1em 0;
+}
+
+.event-module-footer {
 }
