Set font-size to 0. This removes excess padding that can be seen on hover effect.

--- a/src/htdocs/css/event-header.scss
+++ b/src/htdocs/css/event-header.scss
@@ -29,6 +29,7 @@
 			padding:0;
 			text-align:left;
 			display:inline;
+			font-size:0; /* removes hover effect that spills over */
 
 			img {
 				border-radius:3px;
