Added ANSS link to event page footer,  and added a border and margin to the footer's css.

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -2,6 +2,7 @@
 
 @import 'event-layout.css';
 @import 'event-header.css';
+@import 'event-footer.css';
 
 @import 'downloads.css';
 @import '../../../node_modules/hazdev-tablist/src/tablist/TabList.scss';
