--- a/src/htdocs/css/event-header.scss
+++ b/src/htdocs/css/event-header.scss
@@ -1,10 +1,40 @@
 .event-header {
 	> div {
+		position:relative;
 		margin:8px 0;
+
+		> .link {
+			color: #009;
+			text-decoration:underline;
+			cursor:pointer;
+		}
 
 		> span {
 			display:block;
 		}
+
+		> .popup {
+			font-size: smaller;
+			display:none;
+			position:absolute;
+			top:-125%;
+			left:-1em;
+			line-height:1.5;
+			background-color:#FAFAFA;
+			box-shadow:2px 2px 5px rgba(53, 53, 53, 0.7);
+			border:1px solid #333;
+			padding:2px 4px;
+			margin:4px;
+
+			&.visible {
+				display:block;
+			}
+
+			> abbr {
+				border-bottom:1px dotted #333;
+			}
+		}
+
 	}
 
 	> .impact-bubbles {
