Move nodal planes before principal axes. Move Percent DC under depth. Hide last three rows on info-table, add button to expand. Add half duration value to info-table.

--- a/src/htdocs/modules/scientific/0-0-1/css/_MomentTensorPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_MomentTensorPage.scss
@@ -102,6 +102,27 @@
 		}
 	}
 
+	.toggle.hidden {
+		display:none; // hide elements
+	}
+
+	.toggle-button {
+		border: 1px solid #87B4D4;
+		background: #E1E8FF;
+		color: #3B769C;
+		padding:0 5px;
+		float:right;
+		cursor:pointer;
+	}
+
+	.toggle-button.on:before {
+		content: '- less';
+	}
+
+	.toggle-button.off:before {
+		content: '+ more';
+	}
+
 	.principal-axes-table,
 	.nodal-plane-table {
 		width:100%;
