--- a/src/htdocs/modules/scientific/0-0-1/css/_MomentTensorPage.scss
+++ b/src/htdocs/modules/scientific/0-0-1/css/_MomentTensorPage.scss
@@ -21,42 +21,38 @@
 		float:left;
 		display: block;
 		padding: 10px;
-		width: 40%;
 		top: 0;
-		min-height:100px;
-		min-width:100px;
+		width:120px;
 		background: rgb(237,237,237);
 		border-right: 1px solid #ccc;
 	}
 
-	.details {
+	> .details {
 		position: relative;
 		float:left;
 		display:block;
 		padding:5px 10px;
-		max-width:60%;
-	}
 
-	header.title {
-		font-weight:bold;
-		font-size:20px;
-		margin:5px 0 10px 0;
-	}
+		> header.title {
+			font-weight:bold;
+			font-size:18px;
+			margin:5px 0;
+		}
 
-	dl {
-		color:#666;
-		margin:0;
-	}
+		> dl {
+			color:#666;
+			margin:0;
 
-	dt {
-		float: left;
-		font-weight: bold;
-		width: 85px;
-	}
+			> dt {
+				float: left;
+				font-weight: bold;
+				width: 85px;
+			}
 
-	dd {
-		margin: 0 0 0 95px;
-		padding: 0 0 3px 0;
+			> dd {
+				margin: 0 0 0 95px;
+			}
+		}
 	}
 }
 
@@ -79,12 +75,48 @@
 
 	.tensor-summary {
 
-		.details {
-			padding:10px 15px;
+		> canvas {
+			width:40%;
 		}
 
-		dd {
-			padding: 0 0 5px 0;
+		.details {
+			width:60%;
+			padding:5px 15px;
+		}
+	}
+
+}
+
+
+@media screen and (min-width:1100px) {
+
+	.tensor-summary {
+
+		> .details {
+			padding:10px 20px;
+
+			> header.title {
+				font-weight:bold;
+				font-size:36px;
+				margin:0 0 10px;
+			}
+
+			> dl {
+
+				> dt,
+				> dd {
+					font-size:16px;
+					padding: 0 0 2px 0;
+				}
+
+				> dt {
+					width: 95px;
+				}
+
+				> dd {
+					margin: 0 0 0 105px;
+				}
+			}
 		}
 	}
 
