--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,18 +1,18 @@
 @import 'compass/css3';
 
-@import 'event-layout.css';
-@import 'event-header.css';
-@import 'event-footer.css';
+@import 'event-layout';
+@import 'event-header';
+@import 'event-footer';
+@import 'downloads';
+@import 'MouseOverLayer';
 
-@import 'downloads.css';
 @import '../../../node_modules/hazdev-tablist/src/tablist/TabList.scss';
-@import 'MouseOverLayer.css';
 
 // --------------------------------------------------
 // Page-Wide Styles
 // --------------------------------------------------
 
-@import '../modules/base/0-0-1/css/ContentsXML.scss';
+@import '../modules/base/0-0-1/css/index.scss';
 
 * {
 	@include box-sizing(border-box);
