--- a/src/htdocs/modules/summary/0-0-1/css/_InteractiveMap.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/_InteractiveMap.scss
@@ -1,4 +1,5 @@
-@import '../../../../../leaflet/dist/leaflet.css';
+@import "../../../../../../node_modules/leaflet/dist/leaflet";
+
 
 .summary-interactive-map-wrapper {
 	position:fixed;
