--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -3,6 +3,7 @@
 @import 'event-layout.css';
 @import 'event-header.css';
 @import 'event-footer.css';
+@import 'event-summary.css';
 
 @import 'downloads.css';
 @import '../../../node_modules/hazdev-tablist/src/tablist/TabList.scss';
