--- a/src/htdocs/css/event-summary.scss
+++ b/src/htdocs/css/event-summary.scss
@@ -1,5 +1,18 @@
 @import 'tectonic-summary';
 
+.event-content {
+	> .event-module-content {
+		margin-top:0.4em;
+	}
+	> h1, h2, h3 {
+		margin-bottom:0.1em;
+	}
+	h4 {
+		margin-top:0.8em;
+		margin-bottom:0.5em;
+	}
+}
+
 .summary-attribution {
-	margin-top: 1.0em;
+	margin-top:1.0em;
 }
