Removed underscores for non-partials in includes

--- a/src/htdocs/modules/summary/0-0-1/css/index.scss
+++ b/src/htdocs/modules/summary/0-0-1/css/index.scss
@@ -1,6 +1,6 @@
-@import '_InteractiveMap';
+@import 'InteractiveMap';
 @import '_SummaryPage';
-@import '_TectonicSummary';
+@import 'TectonicSummary';
 
 .accordion {
 	> h3 {
