--- a/src/htdocs/css/event-layout.scss
+++ b/src/htdocs/css/event-layout.scss
@@ -2,7 +2,19 @@
 
 }
 .event-content {
-
+	> .event-module-header > h2 {
+		margin-bottom:0.1em;
+	}
+	> .event-module-content {
+		margin-top:0.4em;
+	}
+	> h2, h3 {
+		margin-bottom:0.1em;
+	}
+	h4 {
+		margin-top:0.8em;
+		margin-bottom:0.5em;
+	}
 }
 
 .event-module-header {
